[package]
name = "ddns_client"
version = "0.1.0"
authors = ["kokono <46404153+x33C0C3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
libc = "0.2.92"
openssl = "0.10.33"
